# FCCSW

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  calorecotest.py  e1.py  e10.py  e100.py  e150.py  e20.py  e5.py  e50.py  e500m.py  elecNoise_ecalBarrelFCCee_50Ohm_traces1_4shieldWidth.root  files  init.sh  resmaster.py  runFullCaloSystem_ReconstructionSW_noiseFromFile.py
.github/scripts/: compile_and_test.sh  gitlabmirror.sh  test_envvars.sh
.github/workflows/: test.yml
Detector/DetCommon/DetCommon/: Geant4CaloHit.h
Detector/DetComponents/src/: RewriteBitfield.cpp
Detector/DetFCCeeECalInclined/: CMakeLists.txt
Detector/DetFCCeeECalInclined/compact/: FCCee_ECalBarrel_Common.xml
Detector/DetFCCeeHCalTile/compact/: FCCee_HCalBarrel_TileCal.xml  standalone.xml
Detector/DetFCCeeIDEA-LAr-TileCal/compact/: FCCee_DectDimensions.xml  FCCee_DectMaster.xml
Detector/DetFCCeeIDEA-LAr/compact/: FCCee_DectDimensions.xml  FCCee_DectMaster.xml  Solenoid_o1_v01_02.xml
Detector/DetFCCeeIDEA/compact/: Beampipe.xml  DriftChamber.xml  Vertex.xml
Detector/DetFCCeeLAr/compact/: dimensions.xml  hh_reference_ecal_hcal_master.xml  hh_reference_ecal_master.xml  master.xml  master_ecal_hcal.xml
Detector/DetFCCeeLAr/options/: material_scan.py  matscan_fcceelar.py  matscan_fcchh_reference.py  matscan_fcchh_reference_withHCal.py
Detector/DetFCCeeLAr/scripts/: material_plots.py
Detector/DetFCChhBaseline1/compact/: FCChh_DectEmptyTracker.xml
Detector/DetFCChhTrackerSimple/: CMakeLists.txt
Detector/DetFCChhTrackerTkLayout/compact/: FCChh_DectEmptyTracker.xml
Detector/DetFCChhTrackerTkLayout/src/: TkLayoutBarrel_Geo.cpp  TkLayoutEndcap_Geo.cpp
Detector/DetSensitive/src/: SimpleTrackerSD.cpp
Detector/DetTrackerSimple/: CMakeLists.txt
Detector/DetTrackerSimple/compact/: standalone.xml
EnergyResolution/: geant_fullsim_fccee_pgun.py
EnergyResolutionData/: print_energy.C
Examples/: CMakeLists.txt
Examples/options/: dumpGeo.py  geant_fastsim.py  geant_fullsim_fccee_hepevt.py  geant_fullsim_fccee_pgun.py  geant_fullsim_field.py
Examples/scripts/: plotstyle.py
FWCore/: CMakeLists.txt
FWCore/FWCore/: DataHandle.h
FWCore/src/: PodioDataSvc.cpp
Generation/: CMakeLists.txt
MaterialScanCosTheta/: CMakeLists.txt
MaterialScanCosTheta/options/: material_scan.py  material_scan_idea_lar_only.py  material_scan_idea_only.py  material_scan_idea_tilecal_only.py  plot.C  run.sh
MaterialScanCosTheta/src/: MaterialScanCosTheta.cpp  MaterialScanCosTheta.h
Reconstruction/RecCalorimeter/: CMakeLists.txt
Reconstruction/RecDriftChamber/: CMakeLists.txt
Reconstruction/RecDriftChamber/4Patrizia/: Pythia_LHEinput.cmd  geant_fullsim_fccee_pgun.py  hepmcreader.py  pgun.py  pythia.py
Reconstruction/RecFCChhCalorimeter/: CMakeLists.txt
Reconstruction/RecInterface/RecInterface/: IHitFilterTool.h  IKalmanMeasurementTool.h  ILayerGraphTool.h  ITrackExtrapolationTool.h  ITrackFittingTool.h
Reconstruction/RecTracker/: CMakeLists.txt  RecPlotsMakefile.mk
Reconstruction/RecTracker/RecTracker/: RiemannFit.h  TrackingUtils.h
Reconstruction/RecTracker/options/: KalmanFilterTest.py  TrickTrackReco.py  TrickTrackReco_withTime.py  extrapolationTest.py  geantSim_TrackerPerformance.py  single_particle_trackFits.py
Reconstruction/RecTracker/scripts/: TrackExtrapolationCheck.py  fakeRate.py  plotTrackSeeds.py  plot_single_particle_resolutions.py
Reconstruction/RecTracker/tricktrack/: RiemannFit.h
Sim/SimDelphesInterface/: CMakeLists.txt
Sim/SimG4Common/SimG4Common/: EventInformation.h  G4ParticleData.h
Sim/SimG4Dream/: CMakeLists.txt
Sim/SimG4Dream/SimG4Dream/: DreamDetectorConstruction.hh  dimensionE.hh
Sim/SimG4Dream/components/: SimG4DreamActions.cpp  SimG4DreamActions.h  SimG4DreamDetector.cpp  SimG4DreamDetector.h
Sim/SimG4Dream/src/: DreamDetectorConstruction.cc  dimensionB.cc  dimensionE.cc
Sim/SimG4Fast/: CMakeLists.txt
Test/TestCaloHitMatching/: CMakeLists.txt
Test/TestCaloHitMatching/options/: geant_pgun_fullsim.py
TowerToolBarrel/: CMakeLists.txt
TowerToolBarrel/src/: CaloTowerToolBarrel.cpp  CaloTowerToolBarrel.h
check_calo_geo_tool/: runFullCaloSystem_ReconstructionSW_noiseFromFile.py  runFullCaloSystem_SimAndDigitisation.py  test.C
cmake/: this_fccsw.sh.in
(+54 files in other folders)
