################################################################################
#Package : DetFCCeeECalInclined
################################################################################
gaudi_subdir(DetFCCeeECalInclined v1r0)


install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION Detector/DetFCCeeECalInclined)


